Fri Aug 20 20:01:55 UTC 2010  William R. Otte  <wotte@dre.vanderbilt.edu>

        * ciao/Deployment/Handlers/Connection_Handler.cpp:

          If externalReferenceEndpoints have a zero-length port name, attempt
          to connect as a CORBA 2.x reference.

Fri Aug 20 15:30:11 UTC 2010  William R. Otte  <wotte@dre.vanderbilt.edu>

        * DAnCE/DAnCE/DAnCE_DeploymentInterceptors.idl:
        * DAnCE/DAnCE/DAnCE_DeploymentInterceptors_Base_Impl.h:
        * DAnCE/DAnCE/DAnCE_DeploymentInterceptors_Base_Impl.cpp:
        * DAnCE/LocalityManager/Handler/LocalityActivator_Impl.h:
        * DAnCE/LocalityManager/Handler/LocalityActivator_Impl.cpp:
        * DAnCE/LocalityManager/Handler/LocalityHandler.mpc:
        * DAnCE/LocalityManager/Handler/Locality_Manager_Handler_Impl.cpp:

          Add additional interception point that is invoked on unexpected
          events, beginning with the crash of a locality server.

Fri Aug 20 14:11:53 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * connectors/dds4ccm/tests/ContentFilteredTopic/Deployments/NoQuery.cdp:
          Removed this file, no query is now valid

Thu Aug 19 13:40:42 UTC 2010  William R. Otte  <wotte@dre.vanderbilt.edu>

        * DAnCE/LocalityManager/Scheduler/Plugin_Manager.cpp:

          Reduced log priority of configuration handler message.

Thu Aug 19 11:38:37 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * connectors/ami4ccm/docs/RFP.odt:
          Small improvements

Thu Aug 19 09:44:48 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * DAnCE/Plan_Launcher/Plan_Launcher.cpp:
          Fixed typo

        * DAnCE/tests/LocalityManager/CPUAffinity/run_test.pl:
        * DAnCE/tests/LocalityManager/CommandlinePassage/run_test.pl:
        * DAnCE/tests/LocalityManager/ExplicitExec/run_test.pl:
        * DAnCE/tests/LocalityManager/ProcessName/run_test.pl:
        * DAnCE/tests/LocalityManager/SpawnMultiple/run_test.pl: